# dastan

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  AUTHORS  CONTRIBUTING.md  Makefile  NEWS  README.md  io.github.markviewer.doap  io.github.markviewer.json  meson.build  meson_options.txt
.foundry/: .gitignore
.github/workflows/: ci.yml
.gitlab/issue_templates/: Bug.md  Default.md  Feature.md
assets/: dastan-fonts.conf.in  markviewer.css
build-aux/flatpak/: .gitignore  local-build.sh
build-aux/meson/: post_install.py
build-aux/packaging/: nfpm.yaml
build-aux/packaging/arch/: PKGBUILD
build-aux/packaging/scripts/: postinstall.sh
build-aux/scripts/: dist.sh  fetch-context.sh
context/: context.yml
data/: io.github.markviewer.desktop.in.in  markviewer.css  meson.build
data/appdata/: io.github.markviewer.metainfo.xml.in.in  meson.build
data/fonts/: dastan-fonts.conf.in  meson.build
data/fonts/math/: COPYRIGHT
data/gsettings/: io.github.markviewer.gschema.xml  meson.build
data/icons/: meson.build
data/icons/src/: README.md
docs/: README.md  build-and-development.md  direction-in-ast.md  overview.md  parse-tree.md  preprocessing.md  project-layout.md  rendering-pipeline.md  rtl-and-typography.md  styling-and-layout.md  widget-mapping.md
po/: .gitignore  POTFILES.in  meson.build
scripts/: fetch-context.sh
squashfs-root/: .DirIcon  AppRun  io.github.markviewer.desktop
squashfs-root/usr/share/applications/: io.github.markviewer.desktop
squashfs-root/usr/share/dastan/: dastan-fonts.conf  markdown-themes.css  markviewer.css
squashfs-root/usr/share/glib-2.0/schemas/: gschemas.compiled
src/: application.vala  config.vala.in  font_config.vala  main.vala  markdown_renderer.vala  math_registry.vala  math_widget.vala  meson.build  tree_dumper.vala  window.vala
src/markdown/: preprocessor.vala  renderer.vala
src/markdown/math/: lasem_bridge.c  lasem_bridge.h  paragraph.vala  registry.vala  renderer.vala  widget.vala
src/tests/: meson.build  test-showcase.md
src/tests/fixtures/math/: block-integral.md  code-no-math.md  inline-basic.md  invalid-latex.md  matrix.md  mixed-rtl.md
src/tests/unit/: test_math_registry.vala  test_math_renderer.vala  test_math_widget.vala  test_preprocessor.vala
src/tools/: tree_dumper.vala
src/ui/: theme.vala  window.vala
src/vapi/: cmark-gfm.vapi  markviewer-math.vapi
subprojects/: lasem
test/: test-showcase.md
